2000-02-27  Ian Lance Taylor  <ian@zembu.com>

	* dwarf2.c (read_abbrevs): Use _raw_size directly rather than
	calling bfd_get_section_size_before_reloc.
	(decode_line_info): Likewise.
	(_bfd_dwarf2_find_nearest_line): Likewise.

2000-02-27  Eli Zaretskii  <eliz@is.elta.co.il>

	* Makefile.am (stamp-lib): Use $(LIBTOOL) --config to get the
	name of the libtool directory.
	* Makefile.in: Rebuild.

Fri Feb 25 18:39:26 2000  Rodney Brown (RodneyBrown@pmsc.com)

	* som.c (SOM_HOWTO): Define.
	(som_hppa_howto_table): Use it.

2000-02-25  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* config.bfd: Enable 64 bit support for GNU/Linux/sparc.

	* config.bfd: Enable 64 bit support for Solaris7+/sparc.

2000-02-24  Catherine Moore  <clm@cygnus.com>

	* som.c (som_misc_symbol_info):  Add field
	secondary_def. 
	(som_bfd_derive_misc_symbol_info):  Initialize
	secondary_def.
	(som_build_and_write_symbol_table): Keep track
	of secondary_def field.
	(som_slurp_symbol_table): Set BSF_WEAK symbol flag
	if secondary_def field is set.
	(som_bfd_ar_write_symbol_stuff): Initialize
	secondary_def.

2000-02-23  Stephane Carrez  <stcarrez@worldnet.fr>

	* dwarf2.c (read_address): Read 16-bits addresses.
	(parse_comp_unit): Accept addr_size == 2.
	
2000-02-23  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* bfd-in.h: Update copyright date.

2000-02-23  Linas Vepstas <linas@linas.org>

	* cpu-i370.c: New file.
	* elf32-i370.c:  New file.
	* archures.c (enum bfd_architecture): Add bfd_arch_i370.
	(bfd_i370_arch): New.
	(bfd_archures_list): Add bfd_i370_arch.
	* elf.c (prep_headers): Add bfd_arch_i370.
	* Makefile.am: Add support for IBM 370 elf.
	* config.bfd: Likewise.
	* configure.in: Likewise.
	* libbfd.h (bfd_reloc_code_real_names): Likewise.
	* reloc.c (bfd_reloc_code_type): Likewise.
	* targets.c: Likewise.

	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* bfd-in2.h: Regenerate.

2000-02-22  Ian Lance Taylor  <ian@zembu.com>
